Linked together sub-templates into app template

--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -3,19 +3,19 @@
 <!--Need to put in middle portion!-->
 	<div class="left accordian">
 		<h2 class="current">Worlds</h2>
-		<div class="pane">world content</div>
+		<div class="pane">{* worlds.html *}</div>
 
 		<h2>Classes</h2>
-		<div class="pane">class content</div>
+		<div class="pane">{* classes.html *}</div>
 
 		<h2>Events</h2>
-		<div class="pane">event content</div>
+		<div class="pane">{* events.html *}</div>
 	
 		<h2>Methods</h2>
-		<div class="pane">methods content</div>
+		<div class="pane">{* methods.html *}</div>
 	
 		<h2>Project</h2>
-		<div class="pane">project content</div>	
+		<div class="pane">{* project.html *}</div>	
 	</div>
 	
 	<div>
@@ -35,19 +35,19 @@
 	<div class="right accordian">
 
 		<h2 class="current">Class Information</h2>
-		<div class="pane">... pane content ...</div>
+		<div class="pane">{* class_information.html *}</div>
 
 		<h2>Creation</h2>
-		<div class="pane">... pane content ...</div>
+		<div class="pane">{* creation.html *}</div>
 
 		<h2>Attributes</h2>
-		<div class="pane">... pane content ...</div>
+		<div class="pane">{* attributes.html *}</div>
 		
 		<h2>Behavior</h2>
-		<div class="pane">... pane content ...</div>
+		<div class="pane">{* behavior.html *}</div>
 		
 		<h2>Components</h2>
-		<div class="pane">... pane content ...</div>
+		<div class="pane">{* components.html *}</div>
 
 	</div>
 </body>
