--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -1,3 +1,9 @@
+<head>
+	<script src="/static/jslibs/jquery.js" type="text/javascript"></script>
+	<script src="/static/jslibs/jquery-ui.js" type="text/javascript"></script>
+		<script src="/static/jslibs/include.js" type="text/javascript"></script>
+	<script src="/static/js/modelfactory.js" type="text/javascript"></script>
+</head>
 <html>
 <body>
 <!--Need to put in middle portion!-->
@@ -21,15 +27,11 @@
 	<div>
 		<h2>Project</h2>
 		<div class="horizbuttonbar">
-			<a rel="stylesheet" href="theme.css"></a>
-			<a rel="stylesheet" href="theme.css"></a>
-			<a rel="stylesheet" href="theme.css"></a>
-			<a rel="stylesheet" href="theme.css"></a>
+			
 		</div>
 	</div>
 	<div class="horizbuttonbar">
-		<a rel="stylesheet" href="theme.css"></a>
-		<a rel="stylesheet" href="theme.css"></a>
+		
 	</div>
 	
 	<div class="right accordian">
