--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -1,26 +1,27 @@
 <head>
 	<script src="/static/jslibs/jquery.js" type="text/javascript"></script>
 	<script src="/static/jslibs/jquery-ui.js" type="text/javascript"></script>
-		<script src="/static/jslibs/include.js" type="text/javascript"></script>
-	<script src="/static/js/modelfactory.js" type="text/javascript"></script>
+	<script src="/static/jslibs/include.js" type="text/javascript"></script>
+	<script src="/static/js/guiinit.js" type="text/javascript"></script>
+	<link type="text/css" rel="stylesheet" href="/static/css/custom-theme/jquery-ui-1.8.16.custom.css">
 </head>
 <html>
 <body>
 <!--Need to put in middle portion!-->
-	<div class="left accordian">
-		<h2 class="current">Worlds</h2>
+	<div class="left accordion">
+		<h3 class="current"><a href="#">Worlds</a></h3>
 		<div class="pane">{* worlds.html *}</div>
 
-		<h2>Classes</h2>
+		<h3><a href="#">Classes</a></h3>
 		<div class="pane">{* classes.html *}</div>
 
-		<h2>Events</h2>
+		<h3><a href="#">Events</a></h3>
 		<div class="pane">{* events.html *}</div>
 	
-		<h2>Methods</h2>
+		<h3><a href="#">Methods</a></h3>
 		<div class="pane">{* methods.html *}</div>
 	
-		<h2>Project</h2>
+		<h3><a href="#">Project</a></h3>
 		<div class="pane">{* project.html *}</div>	
 	</div>
 	
@@ -34,7 +35,7 @@
 		
 	</div>
 	
-	<div class="right accordian">
+	<div class="right accordion">
 
 		<h2 class="current">Class Information</h2>
 		<div class="pane">{* class_information.html *}</div>
