--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -37,19 +37,19 @@
 	
 	<div class="right accordion">
 
-		<h2 class="current">Class Information</h2>
+		<h3 class="current"><a href="#">Class Information</a></h3>
 		<div class="pane">{* class_information.html *}</div>
 
-		<h2>Creation</h2>
+		<h3><a href="#">Creation</a></h3>
 		<div class="pane">{* creation.html *}</div>
 
-		<h2>Attributes</h2>
+		<h2><a href="#">Attributes</a></h2>
 		<div class="pane">{* attributes.html *}</div>
 		
-		<h2>Behavior</h2>
+		<h2><a href="#">Behavior</a></h2>
 		<div class="pane">{* behavior.html *}</div>
 		
-		<h2>Components</h2>
+		<h2><a href="#">Components</a></h2>
 		<div class="pane">{* components.html *}</div>
 
 	</div>
