basic 3column layout added

--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -8,50 +8,50 @@
 <html>
 <body>
 <!--Need to put in middle portion!-->
-	<div class="left accordion">
-		<h3 class="current"><a href="#">Worlds</a></h3>
-		<div class="pane">{* worlds.html *}</div>
+  <div class="left"> 
+    <div class="accordion">
+      <h3 class="current"><a href="#">Worlds</a></h3>
+      <div class="pane">{* worlds.html *}</div>
 
-		<h3><a href="#">Classes</a></h3>
-		<div class="pane">{* classes.html *}</div>
+      <h3><a href="#">Classes</a></h3>
+      <div class="pane">{* classes.html *}</div>
 
-		<h3><a href="#">Events</a></h3>
-		<div class="pane">{* events.html *}</div>
+      <h3><a href="#">Events</a></h3>
+      <div class="pane">{* events.html *}</div>
+    
+      <h3><a href="#">Methods</a></h3>
+      <div class="pane">{* methods.html *}</div>
+    
+      <h3><a href="#">Project</a></h3>
+      <div class="pane">{* project.html *}</div>	
+    </div>	
+    <div>
+      <h2>Project</h2>
+      <div class="horizbuttonbar">
+        
+      </div>
+    </div>
+  </div>
 	
-		<h3><a href="#">Methods</a></h3>
-		<div class="pane">{* methods.html *}</div>
-	
-		<h3><a href="#">Project</a></h3>
-		<div class="pane">{* project.html *}</div>	
-	</div>
-	
-	<div>
-		<h2>Project</h2>
-		<div class="horizbuttonbar">
-			
-		</div>
-	</div>
-	<div class="horizbuttonbar">
-		
-	</div>
-	
-	<div class="right accordion">
+  <div class="right"> 
+    <div class="right accordion">
 
-		<h2 class="current">Class Information</h2>
-		<div class="pane">{* class_information.html *}</div>
+      <h2 class="current">Class Information</h2>
+      <div class="pane">{* class_information.html *}</div>
 
-		<h2>Creation</h2>
-		<div class="pane">{* creation.html *}</div>
+      <h2>Creation</h2>
+      <div class="pane">{* creation.html *}</div>
 
-		<h2>Attributes</h2>
-		<div class="pane">{* attributes.html *}</div>
-		
-		<h2>Behavior</h2>
-		<div class="pane">{* behavior.html *}</div>
-		
-		<h2>Components</h2>
-		<div class="pane">{* components.html *}</div>
+      <h2>Attributes</h2>
+      <div class="pane">{* attributes.html *}</div>
+      
+      <h2>Behavior</h2>
+      <div class="pane">{* behavior.html *}</div>
+      
+      <h2>Components</h2>
+      <div class="pane">{* components.html *}</div>
 
-	</div>
+    </div>
+  </div>
 </body>
 </html>
