--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -4,6 +4,7 @@
 	<script src="/static/jslibs/include.js" type="text/javascript"></script>
 	<script src="/static/js/guiinit.js" type="text/javascript"></script>
 	<link type="text/css" rel="stylesheet" href="/static/css/custom-theme/jquery-ui-1.8.16.custom.css">
+	<link type="text/css" rel="stylesheet" href="/static/css/sirpple-css.css">
 </head>
 <html>
 <body>
@@ -11,7 +12,7 @@
   <div class="left"> 
     <div class="accordion">
       <h3 class="current"><a href="#">Worlds</a></h3>
-      <div class="pane">{* worlds.html *}</div>
+      <div class="pane"><div class="pane-one">{* worlds.html *}</div></div>
 
       <h3><a href="#">Classes</a></h3>
       <div class="pane">{* classes.html *}</div>
@@ -34,22 +35,21 @@
   </div>
 	
   <div class="right"> 
-    <div class="right accordion">
+    <div class="accordion">
+      <h3 class="current"><a href="#">Class Information</a></h3>
+      <div class="pane"><div class="pane-one"> {* class_information.html *}</div></div>
 
-		<h3 class="current"><a href="#">Class Information</a></h3>
-		<div class="pane">{* class_information.html *}</div>
+      <h3><a href="#">Creation</a></h3>
+      <div class="pane">{* creation.html *}</div>
 
-		<h3><a href="#">Creation</a></h3>
-		<div class="pane">{* creation.html *}</div>
-
-		<h2><a href="#">Attributes</a></h2>
-		<div class="pane">{* attributes.html *}</div>
-		
-		<h2><a href="#">Behavior</a></h2>
-		<div class="pane">{* behavior.html *}</div>
-		
-		<h2><a href="#">Components</a></h2>
-		<div class="pane">{* components.html *}</div>
+      <h2><a href="#">Attributes</a></h2>
+      <div class="pane">{* attributes.html *}</div>
+      
+      <h2><a href="#">Behavior</a></h2>
+      <div class="pane">{* behavior.html *}</div>
+      
+      <h2><a href="#">Components</a></h2>
+      <div class="pane">{* components.html *}</div>
     </div>
   </div>
 </body>
