--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -2,6 +2,7 @@
 	<script src="/static/jslibs/jquery.js" type="text/javascript"></script>
 	<script src="/static/jslibs/jquery-ui.js" type="text/javascript"></script>
 	<script src="/static/jslibs/include.js" type="text/javascript"></script>
+  <script src="/static/jslibs/sprintf.js" type="text/javascript"></script>
 	<script src="/static/js/guiinit.js" type="text/javascript"></script>
 	<link type="text/css" rel="stylesheet" href="/static/css/custom-theme/jquery-ui-1.8.16.custom.css">
 	<link type="text/css" rel="stylesheet" href="/static/css/sirpple-css.css">
