Added canvas, cleaned up right accordion html

--- a/Sirpple/views/attributes.html
+++ b/Sirpple/views/attributes.html
@@ -1,37 +1,19 @@
-<html>
-<body>
-
-<table width="300" height="200" border ="1">
-<tr>
-</tr>
+<table>
+  <tr>
+  </tr>
 </table>
-<table border = "0">
-<tr>
-<td width = 175></td>
-<td> <input type="button" value= "Add"></td>
-<td> <input type="button" value= "Remove"></td>
-</table>
+<input type="button" value="Add"/>
+<input type="button" value="Remove"/>
 
 <form>
-Name: <input type="text" name="name" /><br />
+  Name: <input type="text" name="name" />
+  Type:
+  <select name="type">
+    <option value="integer" selected="selected">integer</option>
+    <option value="double">double</option>
+    <option value="boolean">boolean</option>
+    <option value="string">string</option>
+  </select>
+  <br/>
+  Default Value: <input type="text" name="defaultvalue" />
 </form>
-<table border = "0">
-<tr>
-<td> Type: </td>
-<td> 
-<form action="">
-<select name="type">
-<option value="integer" selected="selected">integer</option>
-<option value="double">double</option>
-<option value="boolean">boolean</option>
-<option value="string">string</option>
-</select>
-</form> 
-</td>
-</table>
-<form>
-Default Value: <input type="text" name="defaultvalue" /><br />
-</form>
-
-</body>
-</html>
