--- a/Sirpple/views/behavior.html
+++ b/Sirpple/views/behavior.html
@@ -1,30 +1,16 @@
-<html>
-<body>
-
 <!-- Not sure if this is the right formatting here
 Also missing defalt selected data for each (Also see similar in attributes.html & components.html-->
-<table width="300" height="200" border ="1">
-<tr>
-</tr>
+<table>
+  <tr>
+  </tr>
 </table>
-<table border = "0">
-<tr>
-<td width = 175></td>
-<td> <input type="button" value= "Add"></td>
-<td> <input type="button" value= "Remove"></td>
-</table>
+<input type="button" value= "Add">
+<input type="button" value= "Remove">
 
-<table width="300" height="200" border ="1">
-<tr>
-</tr>
+<table>
+  <tr>
+  </tr>
 </table>
-<table border = "0">
-<tr>
-<td width = 130></td>
-<td><input type="button" value= "Add"></td>
-<td> <input type="button" value= "Edit"></td>
-<td> <input type="button" value= "Remove"></td>
-</table>
-
-</body>
-</html>
+<input type="button" value= "Add">
+<input type="button" value= "Edit">
+<input type="button" value= "Remove">
