--- a/Sirpple/views/creation.html
+++ b/Sirpple/views/creation.html
@@ -1,68 +1,38 @@
-<html>
-<body>
-<p style="background-color:CCCCCC;font-size:16px;" >GameWorld</p>
+<h4> GameWorld</h4>
+  <form>
+    Width: <input type="text" name="width" /><br />
+    Height: <input type="text" name="height" /><br />
+    X offset: <input type="text" name="xoffset" /><br />
+    Y offset: <input type="text" name="yoffset" /><br />
+  </form>
+  Background: <br/>
+  <form action="">
+    <select name="backgroundtype">
+      <option value="Image" selected="selected">Image</option>
+    </select>
+    <select name="backgroundimage">
+      <option value="bg1.png" selected="selected">bg1.png</option>
+    </select>
+  </form> 
+  <input type="button" value= "Images...">
 
-<form>
-Width: <input type="text" name="width" /><br />
-Height: <input type="text" name="height" /><br />
-</form>
-<form>
-X offset: <input type="text" name="xoffset" /><br />
-Y offset: <input type="text" name="yoffset" /><br />
-</form>
-<table border = "0">
-<tr>
-<td>
-Background: </td>
-<td>
-<form action="">
-<select name="backgroundtype">
-<option value="Image" selected="selected">Image</option>
-</select>
-</form> 
-</td>
-<tr> <td></td> 
-<td>
-<form action="">
-<select name="backgroundimage">
-<option value="bg1.png" selected="selected">bg1.png</option>
-</select>
-</form> 
-</td>
-</tr>
-<tr> <td></td> 
-<td>
-<input type="button" value= "Images...">
-</td>
-</table>
+<h4>Constructor</h4>
+  <p>Parameters:</p>
+  <table>
+    <tr>
+      <td></td>
+    </tr>
+  </table>
+  <input type="button" value="Add">
+  <input type="button" value="Edit">
+  <input type="button" value="Remove">
 
-<p style="background-color:CCCCCC;font-size:16px;" >Constructor</p>
-
-<p>Parameters:</p>
-<table width="300" height="50" border ="1">
-<tr>
-</tr>
-</table>
-<table border = "0">
-<tr>
-<td width = 130></td>
-<td><input type="button" value= "Add"></td>
-<td> <input type="button" value= "Edit"></td>
-<td> <input type="button" value= "Remove"></td>
-</table>
-
-<p>Actions:</p>
-<table width="300" height="50" border ="1">
-<tr>
-</tr>
-</table>
-<table border = "0">
-<tr>
-<td width = 130></td>
-<td><input type="button" value= "Add"></td>
-<td> <input type="button" value= "Edit"></td>
-<td> <input type="button" value= "Remove"></td>
-</table>
-
-</body>
-</html>
+  <p>Actions:</p>
+  <table>
+    <tr>
+      <td></td>
+    </tr>
+  </table>
+  <input type="button" value= "Add">
+  <input type="button" value= "Edit">
+  <input type="button" value= "Remove">
