--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -33,6 +33,8 @@
       </div>
     </div>
   </div>
+  
+  <canvas id="canvas" width="500" height="650"> Your browser does not support the canvas element! Oh noes! </canvas>
 	
   <div class="right"> 
     <div class="accordion">
