--- a/Sirpple/views/class_information.html
+++ b/Sirpple/views/class_information.html
@@ -1,18 +1,8 @@
-<html>
-<body>
 
-Name: <input type="text" name="player" /><br />
-<table border = "0">
-<tr>
-<td>
-Parent: </td>
-<td>
-<form action="">
-<select name="parent">
-<option value="Game Object" selected="selected">Game Object</option>
-</select>
-</form> 
-</td>
-</table>
-</body>
-</html>
+Name: 
+<form action = "" style="width:172px">
+  <input type="text" name="player" /><br />
+  <select name="parent">
+    <option value="Game Object" selected="selected">Game Object</option>
+  </select>
+</form>
