--- a/Sirpple/views/components.html
+++ b/Sirpple/views/components.html
@@ -1,17 +1,7 @@
-<html>
-<body>
-
 <!-- Not sure if this is the right formatting here-->
-<table width="300" height="200" border ="1">
-<tr>
-</tr>
+<table>
+  <tr>
+  </tr>
 </table>
-<table border = "0">
-<tr>
-<td width = 175></td>
-<td> <input type="button" value= "Add"></td>
-<td> <input type="button" value= "Remove"></td>
-</table>
-
-</body>
-</html>
+<input type="button" value= "Add">
+<input type="button" value= "Remove">
