--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -3,7 +3,7 @@
 	<script src="/static/jslibs/jquery-ui.js" type="text/javascript"></script>
 	<script src="/static/jslibs/include.js" type="text/javascript"></script>
   <script src="/static/jslibs/sprintf.js" type="text/javascript"></script>
-  <script src="/static/jslibs/jsyaml.js" type="text/javascript"></script>
+  <script src="/static/jslibs/js-yaml.js" type="text/javascript"></script>
   <script src="/static/jslibs/base2.js" type="text/javascript"></script>
 	<script src="/static/js/guiinit.js" type="text/javascript"></script>
   <script src="/static/js/modelfactory.js" type="text/javascript"></script>
