--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -7,6 +7,7 @@
   <script src="/static/jslibs/base2.js" type="text/javascript"></script>
 	<script src="/static/js/guiinit.js" type="text/javascript"></script>
   <script src="/static/js/modelfactory.js" type="text/javascript"></script>
+  <script src="/static/js/modelgateway.js" type="text/javascript"></script>
 	<link type="text/css" rel="stylesheet" href="/static/css/custom-theme/jquery-ui-1.8.16.custom.css">
 	<link type="text/css" rel="stylesheet" href="/static/css/sirpple-css.css">
 </head>
