--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -33,10 +33,15 @@
   </div>
   
   <div class="middle">
-    <canvas id="canvas" width="500" height="600"> Your browser does not support the canvas element! Oh noes! </canvas>
-      <h2>Project</h2>
-      <div class="horizbuttonbar">
-      </div>
+    <canvas id="canvas" class="droppable" width="500" height="600"> Your browser does not support the canvas element! Oh noes! </canvas>
+      <table class="horizbuttonbar">
+        <tr>
+          <td>Start</td>
+          <td>Download</td>
+          <td>New</td>
+          <td>Open</td>
+        </tr>
+      </table>
   </div>
 	
   <div class="right"> 
