--- a/Sirpple/views/classes.html
+++ b/Sirpple/views/classes.html
@@ -1,6 +1,6 @@
 <table class="leftTable">
   <tr>
     <td><img class="draggable" src="/static/images/block.jpg"/></td>
-    <td><img class="draggable" src="/static/images/block.jpg"/></td>
+    <td><img class="draggable" src="/static/images/brick.png"/></td>
   </tr>
 </table>
