--- a/Sirpple/views/events.html
+++ b/Sirpple/views/events.html
@@ -1,3 +1,9 @@
-<select size ="5">
-	id="eventslist"
-</select>
+<ul>
+  <li class="draggable">onClick</li>
+  <li class="draggable">onMouseOver</li>
+  <li class="draggable">onKeyPress</li>
+  <li class="draggable">onLoad</li>
+  <li class="draggable">onDestroy</li>
+  <li class="draggable">onCollide</li>
+  <li class="draggable">onStep</li>
+</ul>
