--- a/Sirpple/views/worlds.html
+++ b/Sirpple/views/worlds.html
@@ -1,3 +1,5 @@
-<select size ="5">
-	id="worldslist"
-</select>
+<table>
+  <tr><td>
+    <img src="/static/images/world1.jpg"/>
+  </td></tr>
+</table>
