Quick layout fix

--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -33,7 +33,7 @@
   </div>
   
   <div class="middle">
-    <canvas id="canvas" class="droppable" width="500" height="600"> Your browser does not support the canvas element! Oh noes! </canvas>
+    <canvas id="canvas" class="droppable" width="500" height="600"> Your browser does not support the canvas element! Oh noes! </canvas><br/>
       <table class="horizbuttonbar">
         <tr>
           <td>Start</td>
