Added link to compiler test

--- a/Sirpple/views/app.html
+++ b/Sirpple/views/app.html
@@ -62,5 +62,9 @@
       <div class="pane">{* components.html *}</div>
     </div>
   </div>
+
+  <p>
+    <a href="/test?module=dj&test=project&format=text/html">Compiler test</a>
+  </p>
 </body>
 </html>
